devops/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: home-web-svc
spec:
    type: ClusterIP
    ports:
    - port: 80 
      protocol: TCP
      targetPort: 4173
    selector:
        app: home-web
