devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: your-domain.com
    http:
      paths:
      - backend:
          service:
            name: your-svc
            port:
              number: 80
        path: /
        pathType: Prefix
